# OBS-game-isolator

./: CMakeLists.txt  PKGBUILD  README.md
src/: pipewire-audio.c  pipewire-audio.h  plugin-main.c
